# yascc

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  build.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build_wheels.yml  main.yml
src/: case.c  snakecase.py
src/yascc/: __init__.py  _bench.py  camelcase.py  case.c  common.py  snakecase.py  stack.h
tests/: conftest.py  django_rest_framework_camelcase.py  test_camelcase.py  test_snakecase.py
yascc/: camelcase.py  common.py  snakecase.py
