[tool.pdm]
build = "build.py"
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
    "cibuildwheel>=2.3.1",
    "pre-commit>=2.17.0",
]

[tool.pdm.scripts]
lint = 'pre-commit'
[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.black]
addopts = '--fast'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | manage.py           # also separately exclude a file named foo.py in
)
'''
line-length = 119
target_version = ['py37']

[tool.isort]
known_third_party = ["pytest"]
line_length = 119
profile = "black"
skip_gitignore = "True"
force_single_line = "True"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest --pyargs yascc"

[project]
name = "yascc"
version = "0.3.0"
description = ""
authors = [{ name = "urm8", email = "arctgisnil@gmail.com" }]
dependencies = []
requires-python = ">=3.7"
license = { text = "DTFYW" }

[project.urls]
Homepage = ""

[project.optional-dependencies]
