[tool.pdm]
build = "build.py"
source-includes = ["tests", "LICENSE", "README.md"]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.0.1",
    "cibuildwheel>=2.3.1",
    "pre-commit>=2.17.0",
]

[tool.pdm.scripts]
lint = 'pre-commit'
[build-system]
requires = ["pdm-pep517", "setuptools>=42", "wheel"]
build-backend = "pdm.pep517.api"

[tool.black]
addopts = '--fast'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | manage.py           # also separately exclude a file named foo.py in
)
'''
line-length = 119
target_version = ['py37']

[tool.isort]
known_third_party = ["pytest"]
line_length = 119
profile = "black"
skip_gitignore = "True"
force_single_line = "True"

[tool.cibuildwheel]
build = "*"

[project]
name = "yascc"
version = "0.3.1"
description = "Yet another string case converter"
readme = "README.md"
authors = [{ name = "urm8", email = "arctgisnil@gmail.com" }]
dependencies = []
requires-python = ">=3.7"
license = { text = "DTFYW" }
classifiers = [
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


[project.urls]
Homepage = "https://github.com/urm8/yascc"
Repository = "https://github.com/urm8/yascc"


[project.optional-dependencies]
